@@ -27,7 +27,6 @@
     <File name="Mono.Debugging.Client/TargetEventType.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.Debugging.Client/ThreadEventArgs.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.Debugging.Backend/IBacktrace.cs" subtype="Code" buildaction="Compile" />
-    <File name="Mono.Debugging.Backend/IDebuggerSessionBackend.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.Debugging.Backend/IDebuggerSessionFrontend.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.Debugging.Backend/DebuggerExtensionNode.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.Debugging.addin.xml" subtype="Code" buildaction="EmbedAsResource" />
